# MCU-Template

./: README.md
AT32/AT32F421-Keil/: AT-Fw.code-workspace
AT32/AT32F421-Keil/lib/ctrl-sdk/: ctrl_defs.h  hal_ccp_prot.c  hal_ccp_recv.c  hal_ccp_recv.h  lib_assert.c  lib_assert.h  lib_assert_prot.c  lib_cfg.h  lib_fsm.c  lib_fsm.h  lib_list.c  lib_list.h  lib_loop_task.c  lib_loop_task.h  lib_queue.c  lib_queue.h  lib_simple_buffer.c  lib_simple_buffer.h  lib_stack.h  lib_tick.c  lib_tick.h  lib_tick_prot.c  lib_timer.c  lib_timer.h  lib_utils.c  lib_utils.h  math_base.c  math_base.h  math_filter.c  math_filter.h  math_pid.c  math_pid.h
AT32/AT32F421-Keil/src/bsp/: at32f421_board.c  bsp.h  delay.c  delay.h  mcu.h  nvic.c  uart.c  uart.h
AT32/AT32F421-Keil/src/core/: at32f421_clock.c  at32f421_conf.h  at32f421_int.c  main.c
AT32/AT32F421-Keil/src/dbg/: dbg.c  dbg.h  vofa.c  vofa.h
AT32/AT32F421-Keil/tools/: at32f421k8u6.jflash
AT32/AT32F421-Keil/uvision/: AT32F421.uvprojx
GD32/: .gitignore
GD32/GD32F303-ARMCC-Keil/: .gitignore  README.md
GD32/GD32F303-ARMCC-Keil/lib/segger_rtt/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
GD32/GD32F303-ARMCC-Keil/lib/segger_rtt/RTT/: SEGGER_RTT_printf.c
GD32/GD32F303-ARMCC-Keil/lib/segger_rtt/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
GD32/GD32F303-ARMCC-Keil/src/bsp/: nvic.c  nvic.h  spi0_dma.c  spi0_dma.h  spi2.c  spi2.h  tim0_pwm.c  tim0_pwm.h  tim5.c  tim5.h  tim6.c  tim6.h  usart2_dma.c  usart2_dma.h
GD32/GD32F303-ARMCC-Keil/src/core/: gd32f30x_it.c  main.c  sys.c
GD32/GD32F303-ARMCC-Keil/src/dbg/: dbg.c  dbg.h  vofa.c  vofa.h
GD32/GD32F303-ARMCC-Keil/tools/: copy_compilation_database.bat  copy_compilation_database.sh
GD32/GD32F303-ARMCC-Keil/uvision/: GD32F303-Porject.uvprojx
GD32/GD32F303-ArmClang-CMake/: .gitignore  CMakeLists.txt  README.md  cmake_help.txt
GD32/GD32F303-ArmClang-CMake/Core/: main.c
GD32/GD32F303-ArmClang-CMake/MDK-ARM/: GD32F303-Porject.uvoptx  GD32F303-Porject.uvprojx
GD32/GD32F303-ArmClang-CMake/Tools/: cmake_build.bat
GD32/GD32F303-DSP-GNU-CMake/: .clang-format  .clangd  GD32F303xC.ld  README.md
GD32/GD32F303-DSP-GNU-CMake/lib/gd32/CMSIS/GD/GD32F30x/Source/GNU/: startup_gd32f30x_hd.s
GD32/GD32F303-DSP-GNU-CMake/src/: CMakeLists.txt
GD32/GD32F303-DSP-GNU-CMake/src/core/: main.c  systick.h
GD32/GD32F303-Porject-GNU-CMake/: .clang-tidy  CMakeLists.txt
GD32/GD32F303-Porject-GNU-CMake/cmake/: gcc-arm-none-eabi.cmake
GD32/GD32F303-Porject-GNU-CMake/lib/: CMakeLists.txt
GD32/GD32F303-Porject-GNU-CMake/src/core/: gd32f30x_it.c  sys.c
GD32/GD32F303-Porject-GNU-CMake/tools/: cmake_build.bat
GD32/GD32F303-ThreadX-GNU-CMake/: linker.ld
GD32/GD32F303-ThreadX-GNU-CMake/cmake/: gcc-arm-none-eabi.cmake
GD32/GD32F303-ThreadX-GNU-CMake/lib/: CMakeLists.txt
GD32/GD32F303-ThreadX-GNU-CMake/lib/gd32/GD32F30x_usbd_library/class/device/dfu/Source/: dfu_core.c
GD32/GD32F303-ThreadX-GNU-CMake/src/core/: main.c  sys.c
GD32/GD32F303-ThreadX-USBX-GNU-CMake/: .gitignore
GD32/GD32F303-ThreadX-USBX-GNU-CMake/cmake/: gcc-arm-none-eabi.cmake
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/: CMakeLists.txt
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/gd32/: CMakeLists.txt
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/threadx/ports/cortex_m4/gnu/: CMakeLists.txt
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/usbx/: CMakeLists.txt
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/usbx/common/: CMakeLists.txt
GD32/GD32F303-ThreadX-USBX-GNU-CMake/lib/usbx/common/usbx_host_classes/inc/: ux_host_class_asix.h
GD32/GD32F303-ThreadX-USBX-GNU-CMake/src/core/: gd32f30x_it.c  main.c  sys.h
